# theGrid

./: .parlance.json  .parlance.yaml  CNAME  Cargo.toml  README.md  astro.config.mjs  idp-signin.html  package.json  pnpm-lock.yaml  styles.css
.cargo/: config.toml
.github/workflows/: linux.yml  macos.yml  pages.yml  windows.yml
gpui_tokio/: Cargo.toml
gpui_tokio/src/: defer.rs  gpui_tokio.rs
public/: giphurs.css  idp-signin.html  idp-styles.css  oauth-signin.html  styles.css
src/components/: Button.astro  Footer.astro  Grid.astro  GridSlice.astro  LatestVersionIndicator.tsx
src/components/Header/: Header.astro  HeaderItem.astro  LogoContainer.astro  MobileHeader.astro  SocialIcons.astro
src/layouts/: Layout.astro  styles.css
src/pages/: 404.astro  download.astro  index.astro
thegrid/: Cargo.toml  Contemporary.toml  build.rs
thegrid/src/: account_settings.rs  actions.rs  admonition.rs  auth.rs  chat.rs  identity_reset.rs  lib.rs  main.rs  main_surface.rs  main_window.rs  mxc_image.rs  not_ready_surface.rs  register.rs  session.rs  tokio_helper.rs  uiaa_client.rs  upload_mxc_dialog.rs  utilities.rs
thegrid/src/account_settings/: deactivate_account.rs  devices_settings.rs  ignored_users_settings.rs  notifications_settings.rs  profile_settings.rs  security_settings.rs
thegrid/src/account_settings/security_settings/: identity_reset.rs  key_export_popover.rs  key_import_popover.rs  password_change.rs  recovery_key_reset_popover.rs
thegrid/src/auth/: auth_surface.rs  emoji_flyout.rs  logout_popover.rs  oauth_management_page_redirect_dialog.rs  recovery_passphrase_popover.rs  verification_popover.rs
thegrid/src/auth/verification_popover/: verification_reciporicate_page.rs  verification_sas_page.rs  verification_select_page.rs
thegrid/src/chat/: chat_input.rs  chat_room.rs  chat_surface.rs  displayed_room.rs  emoji_flyout.rs  forced_device_verification.rs  join_room.rs  main_chat_surface.rs  new_account_onboarding.rs  room_directory.rs  sidebar.rs  timeline_event.rs
thegrid/src/chat/chat_input/: autocomplete.rs
thegrid/src/chat/chat_room/: attachments_view.rs  call_members_view.rs  chat_bar.rs  invite_popover.rs  open_room.rs  room_members.rs  room_settings.rs  room_timeline_content.rs  space_lobby_content.rs  timeline.rs  timeline_view.rs  user_action_dialogs.rs
thegrid/src/chat/chat_room/room_settings/: room_replace_popover.rs
thegrid/src/chat/chat_room/timeline_view/: author_flyout.rs  event_filter.rs  flag_event_popover.rs  membership_change_item.rs  message_error_item.rs  profile_change_item.rs  reply_fragment.rs  room_head.rs  rtc_notification_item.rs  state_change_element.rs  state_event_item.rs  timeline_item.rs  timeline_message_item.rs
thegrid/src/chat/join_room/: create_room_popover.rs  create_space_popover.rs  direct_join_room_popover.rs
thegrid/src/chat/sidebar/: directory_sidebar_page.rs  root_sidebar_page.rs  sidebar_list.rs  space_sidebar_page.rs  standard_room_element.rs
thegrid/src/chat/timeline_event/: author_flyout.rs  queued_event.rs  room_head.rs  room_message_element.rs  room_message_event.rs  room_message_event_renderable.rs  room_state_event.rs
thegrid/src/register/: register_homeserver_page.rs  register_matrix_auth_password_page.rs  register_surface.rs
thegrid/src/session/: account_cache.rs  caches.rs  devices_cache.rs  error_handling.rs  media_cache.rs  notifications.rs  room_cache.rs  session_manager.rs  verification_requests_cache.rs
thegrid/translations/: en.json  he.json  meta.json  vi.json
thegrid_common/: Cargo.toml
thegrid_common/src/: lib.rs  mxc_image.rs  outbound_track.rs  room.rs  sas_emoji.rs  session.rs  sfx.rs  surfaces.rs  thegrid_error.rs  tokio_helper.rs  video_frame.rs
thegrid_common/src/mxc_image/: fallback_image.rs
thegrid_common/src/room/: active_call_participants.rs
thegrid_common/src/session/: account_cache.rs  caches.rs  capability_cache.rs  database_secret.rs  devices_cache.rs  error_handling.rs  ignored_users_cache.rs  media_cache.rs  room_cache.rs  session_manager.rs  spaces_cache.rs  sso_login.rs  verification_requests_cache.rs
thegrid_common/translations/: en.json  he.json  meta.json  vi.json
thegrid_rtc_livekit/: Cargo.toml
thegrid_rtc_livekit/src/: active_call_sidebar_alert.rs  call_disconnect_confirmation_dialog.rs  call_manager.rs  call_surface.rs  focus.rs  lib.rs  mic.rs  rtc_audio_stream_source.rs  sfx.rs  webcam.rs
thegrid_rtc_livekit/src/call_surface/: call_page.rs  call_start_page.rs
thegrid_rtc_livekit/src/call_surface/call_page/: webcam_start_dialog.rs
thegrid_rtc_livekit/translations/: en.json  he.json  meta.json
thegrid_screen_share/: Cargo.toml
thegrid_screen_share/src/: background_rgb_yuv_thread.rs  lib.rs  mac.rs  win.rs  xdg_portal.rs
thegrid_text_rendering/: Cargo.toml  LICENSE  README.md
thegrid_text_rendering/src/: global_state.rs  inline.rs  lib.rs  node.rs  style.rs  text_view.rs  utils.rs
thegrid_text_rendering/src/format/: html.rs  markdown.rs
thegrid_text_rendering/src/format/html5minify/: mod.rs
thegrid_text_rendering/src/highlighter/: highlighter.rs  languages.rs  mod.rs  registry.rs  rope_ext.rs
thegrid_text_rendering/src/highlighter/themes/: qtc-dark.json
