[workspace]
resolver = "3"
members = ["gpui_tokio", "thegrid", "thegrid_text_rendering"]

[workspace.dependencies]
gpui = "*"
gpui_tokio = { path = "gpui_tokio" }
smol = "2"
smol-macros = "0.1"
contemporary = { git = "https://github.com/vicr123/contemporary-rs" }
cntp_i18n = { git = "https://github.com/vicr123/contemporary-rs", features = ["gpui"] }
cntp_icon_tool_macros = { git = "https://github.com/vicr123/contemporary-rs" }
cntp_i18n_gen = { git = "https://github.com/vicr123/contemporary-rs" }
ini = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"
tracing = "0.1"
matrix-sdk = { version = "0.14", features = ["anyhow", "markdown", "sso-login", "e2e-encryption", "qrcode", "bundled-sqlite"] }
matrix-sdk-ui = "0.14"
tokio = { version = "1.47", features = ["full"] }
uuid = "1"
async-channel = "2"
image = "0.25"
smallvec = "1"
chrono = "0.4"
unicode-segmentation = "1"
emojis = "0.7"
directories = "6"
imbl = "5"
mime2ext = "0.1"
anyhow = "1"
