[workspace]
resolver = "3"
members = ["gpui_tokio", "thegrid", "thegrid_common", "thegrid_rtc_livekit", "thegrid_screen_share", "thegrid_text_rendering"]

[workspace.dependencies]
gpui = "*"
gpui_tokio = { path = "gpui_tokio" }
thegrid_common = { path = "thegrid_common" }
thegrid_rtc_livekit = { path = "thegrid_rtc_livekit" }
thegrid_screen_share = { path = "thegrid_screen_share" }
smol = "2"
smol-macros = "0.1"
contemporary = { git = "https://github.com/vicr123/contemporary-rs" }
cntp_i18n = { version = "*", features = ["gpui"] }
cntp_icon_tool_macros = { git = "https://github.com/vicr123/contemporary-rs" }
cntp_i18n_gen = "*"
ini = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"
tracing = "0.1"
matrix-sdk = { version = "0.16", features = ["anyhow", "markdown", "sso-login", "e2e-encryption", "qrcode", "bundled-sqlite"] }
matrix-sdk-ui = "0.16"
matrix-sdk-crypto = "0.16"
tokio = { version = "1.47", features = ["full"] }
uuid = "1"
async-channel = "2"
image = "0.25"
smallvec = "1"
chrono = "0.4"
unicode-segmentation = "1"
emojis = "0.7"
directories = "6"
imbl = "6"
mime2ext = "0.1"
anyhow = "1"
log = "0.4.28"
livekit = { version = "0.7", features = ["native-tls"] }
reqwest = "0.13"
async-ringbuf = "0.3"
cancellation-token = "0.1"
yuv = "0.8"
nokhwa = { version = "0.10", features = ["input-native", "output-threaded"], default-features = false }
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service", "tokio", "crypto-rust"] }
getrandom = "0.4"
base64 = "0.22"
libwebrtc = "0.3"
ringbuffer = "0.16"
raw-window-handle = "0.6"
rustc-hash = "2"
qrcode = { version = "0.14", features = ["image"] }