[package]
name = "thegrid"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { workspace = true }
gpui_tokio = { workspace = true }
smol = { workspace = true }
smol-macros = { workspace = true }
contemporary = { workspace = true }
cntp_i18n = { workspace = true }
cntp_icon_tool_macros = { workspace = true }
tracing = { workspace = true }
ini = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
url = "2.5.7"
matrix-sdk = { workspace = true }
matrix-sdk-ui = { workspace = true }
matrix-sdk-crypto = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
async-channel = { workspace = true }
image = { workspace = true }
smallvec = { workspace = true }
chrono = { workspace = true }
unicode-segmentation = { workspace = true }
emojis = { workspace = true }
directories = { workspace = true }
imbl = { workspace = true }
mime2ext = { workspace = true }
thegrid_text_rendering = { path = "../thegrid_text_rendering" }
thegrid_common = { workspace = true }
thegrid_rtc_livekit = { workspace = true }

[build-dependencies]
cntp_i18n_gen = { workspace = true }

# Fixes "two different versions of crate `core_graphics` are being used" error.
[target.'cfg(target_os = "macos")'.dependencies]
core-text = "=21.0.0"
