[package]
name = "thegrid_rtc_livekit"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { workspace = true }
matrix-sdk = { workspace = true }
thegrid_common = { workspace = true }
contemporary = { workspace = true }
cntp_i18n = { workspace = true }

[build-dependencies]
cntp_i18n_gen = { workspace = true }