[package]
name = "thegrid_rtc_livekit"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { workspace = true }
matrix-sdk = { workspace = true }
thegrid_common = { workspace = true }
contemporary = { workspace = true }
cntp_i18n = { workspace = true }
livekit = { workspace = true }
reqwest = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.28"
rodio = "0.22"
cpal = "0.17"
async-ringbuf = { workspace = true }
cancellation-token = { workspace = true }

[build-dependencies]
cntp_i18n_gen = { workspace = true }
